# rust_os

./: Cargo.toml  ReadMe.md
.cargo/: config.toml
src/: lib.rs  main.rs  qemu.rs  serial.rs
src/lib/: mod.rs  unittest.rs  vga_buffer.rs
src/libs/: serial.rs  unittest.rs  vga_buffer.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  should_panic_no_harness.rs  stack_overflow.rs
