[package]
name = "rustos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

[dependencies]
bootloader = {version = "0.9.8", features = ["map_physical_memory"] }
volatile = "0.2.6"  # due to newer version need to impl Deref trait
lazy_static = {version="1.0", features = ["spin_no_std"]}
spin = "0.9.4"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.10.1"
crossbeam-queue = {version = "0.2.1", default-features = false, features = ["alloc"]}
conquer-once = {version = "0.2.0", default-features = false}
futures-util = {version = "0.3.4", default-features = false, features=["alloc"]}

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
# calculation is process success code = 0x10, and qemu exit code will be set as (0x10 << 1) | 1 = 33
test-success-exit-code = 33  
test-timeout = 300

[[test]]
name = "should_panic_no_harness"
harness = false

[[test]]
name = "stack_overflow"
harness = false